# talk_system

./: .gitignore  QUICKSTART_REFACTORING.md  README.md  README_SERVICE.md  REFACTORING_PLAN.md  TASK_TRACKER.md  TESTING_CHECKLIST.md  config.py  conversation_app.py  extract_layers_fixed.py  install_service.sh  kikai-kun.service  main.py  pyproject.toml  requirements.txt  uninstall_service.sh  wake_word_daemon.py
docs/: ARCHITECTURE.md
model/: kikaikun_ja_raspberry-pi_v4_0_0.ppn
src/: __init__.py  audio.py  config_models.py  gui.py  logging_config.py  realtime_client.py  state_machine.py  wake_word.py
src/animation/: __init__.py  animation_controller.py  body_animator.py  character_renderer.py  eye_animator.py  hand_animator.py  mouth_animator.py
utils/: search_utils.py
